--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,12 @@ license = Artistic_2_0
 copyright_holder = Renee Baecker
 copyright_year   = 2013
 
-[@Basic]
 [VersionFromModule]
+[PodWeaver]
+
+[@Basic]
 [@Git]
 
 [Prereqs]
-Data::Validate::WithYAML = 0.08
+Data::Validate::WithYAML = 0.12
 Algorithm::CheckDigits = 0
